fix left (right?) align
css is the most advanced programming language
- msq

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -105,6 +105,6 @@ p, li, a {
 }
 
 [class*="codeBlockTitle"] {
-  text-align: left !important;
+  text-align: right;
   font-family: 'Vazirmatn', sans-serif;
 }
